// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollSyncRow should handle rendering when the given cell does not match any column 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftStickySection
    cells={Array []}
  />
  <ScrollableSection
    cells={
      Array [
        <div
          className={undefined}
          style={
            Object {
              "flex": "0 0 150px",
              "width": "150px",
            }
          }
        />,
      ]
    }
    onScroll={[Function]}
    rowId={1}
  />
  <RightStickySection
    cells={Array []}
  />
</div>
`;

exports[`ScrollSyncRow should render a header row when it is specified with the given class name 1`] = `
<div
  className="a-header-class-name"
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftStickySection
    cells={Array []}
  />
  <ScrollableSection
    cells={
      Array [
        <div
          className={undefined}
          style={
            Object {
              "flex": "0 0 150px",
              "width": "150px",
            }
          }
        >
          <ScrollSyncCell
            column="a"
          >
            Row A / Column A
          </ScrollSyncCell>
        </div>,
      ]
    }
    onScroll={[Function]}
    rowId={0}
  />
  <RightStickySection
    cells={Array []}
  />
</div>
`;

exports[`ScrollSyncRow should render columns in the left sticky section 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftStickySection
    cells={
      Array [
        <div
          className={undefined}
          style={
            Object {
              "flex": "0 0 150px",
              "width": "150px",
            }
          }
        >
          <ScrollSyncCell
            column="a"
          >
            Row A / Column A
          </ScrollSyncCell>
        </div>,
      ]
    }
  />
  <ScrollableSection
    cells={Array []}
    onScroll={[Function]}
    rowId={1}
  />
  <RightStickySection
    cells={Array []}
  />
</div>
`;

exports[`ScrollSyncRow should render columns in the rigth sticky section 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftStickySection
    cells={Array []}
  />
  <ScrollableSection
    cells={Array []}
    onScroll={[Function]}
    rowId={1}
  />
  <RightStickySection
    cells={
      Array [
        <div
          className={undefined}
          style={
            Object {
              "flex": "0 0 150px",
              "width": "150px",
            }
          }
        >
          <ScrollSyncCell
            column="a"
          >
            Row A / Column A
          </ScrollSyncCell>
        </div>,
      ]
    }
  />
</div>
`;

exports[`ScrollSyncRow should render columns in the scrollable section if no sticky align is specified 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftStickySection
    cells={Array []}
  />
  <ScrollableSection
    cells={
      Array [
        <div
          className={undefined}
          style={
            Object {
              "flex": "0 0 150px",
              "width": "150px",
            }
          }
        >
          <ScrollSyncCell
            column="a"
          >
            Row A / Column A
          </ScrollSyncCell>
        </div>,
      ]
    }
    onScroll={[Function]}
    rowId={1}
  />
  <RightStickySection
    cells={Array []}
  />
</div>
`;

exports[`ScrollSyncRow should render its default content 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "minHeight": "50px",
      "overflow": "hidden",
    }
  }
>
  <LeftStickySection
    cells={Array []}
  />
  <ScrollableSection
    cells={Array []}
    onScroll={[Function]}
    rowId={1}
  />
  <RightStickySection
    cells={Array []}
  />
</div>
`;
